Done with API for NYtimes-HTML to Factors

--- a/HTML_to_Factors+Text.ipynb
+++ b/HTML_to_Factors+Text.ipynb
@@ -2,38 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<span class=\"byline-author \" data-byline-name=\"Ginia Bellafante\" itemprop=\"name\">GINIA BELLAFANTE</span>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "url = \"https://www.nytimes.com/2017/02/03/nyregion/kirsten-gillibrand-anti-trump-left.html?hp&action=click&pgtype=Homepage&clickSource=story-heading&module=b-lede-package-region&region=top-news&WT.nav=top-news\"\n",
-    "response = requests.get(url)\n",
-    "if response.status_code == 200:\n",
-    "    #print(response.content)\n",
-    "    page_data_soup = BeautifulSoup(response.content,'lxml')\n",
-    "#     print(page_data_soup.prettify())\n",
-    "    author_name = page_data_soup.find('span', class_='byline-author')\n",
-    "    print(author_name)\n",
-    "    num_links = len(page_data_soup.find_all('a', href=True))\n",
+    "def html_to_factors_nytimes(url):\n",
+    "    \"\"\"\n",
+    "    Given a url, this function returns a dictionary which contains the name of the author, \n",
+    "    number of links on the website, the headline and the body.\n",
+    "    \"\"\"\n",
+    "    import requests\n",
+    "    from bs4 import BeautifulSoup\n",
     "    \n",
-    "    for tag in page_data_soup.find_all('i', class_=\"icon\"):\n",
-    "        print(tag)\n",
-    "    \n",
-    "    \n",
-    "    # of comments → find <span class=\"count\">401</span>"
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        page_data_soup = BeautifulSoup(response.content,'lxml')\n",
+    "        author_name = page_data_soup.find('span', class_='byline-author')\n",
+    "        num_links = len(page_data_soup.find_all('a', href=True))\n",
+    "        headline = page_data_soup.find('h1', itemprop=\"headline\")\n",
+    "        len_headline = len(headline)\n",
+    "        body = ''\n",
+    "        for tag in page_data_soup.find_all('p', class_='story-body-text story-content'):\n",
+    "            body += tag.text\n",
+    "        dict_solution = {'author_name':author_name, \"num_links\":num_links, \"headline\":headline,\"body\":body}\n",
+    "        return dict_solution"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "url = \"https://www.nytimes.com/2017/02/03/nyregion/kirsten-gillibrand-anti-trump-left.html?hp&action=click&pgtype=Homepage&clickSource=story-heading&module=b-lede-package-region&region=top-news&WT.nav=top-news\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
