updated APIs for html_to_factors

--- a/HTML_to_Factors+Text.ipynb
+++ b/HTML_to_Factors+Text.ipynb
@@ -20,15 +20,13 @@
     "    if response.status_code == 200:\n",
     "        page_data_soup = BeautifulSoup(response.content,'lxml')\n",
     "        author_name = page_data_soup.find('span', class_='byline-author').text\n",
-    "        num_links = [link.get('href') for link in page_data_soup.find_all('a', href=True)]\n",
-    "        print(num_links)\n",
-    "        \n",
+    "        links = [link.get('href') for link in page_data_soup.find_all('a', href=True)]\n",
     "        headline = page_data_soup.find('h1', itemprop=\"headline\").text\n",
     "        len_headline = len(headline)\n",
     "        body = ''\n",
     "        for tag in page_data_soup.find_all('p', class_='story-body-text story-content'):\n",
     "            body += tag.text\n",
-    "        dict_solution = {'author_name':author_name, \"num_links\":num_links, \"headline\":headline,\"body\":body}\n",
+    "        dict_solution = {'author_name':author_name, \"links\":links, \"headline\":headline,\"body\":body}\n",
     "        return dict_solution"
    ]
   },
@@ -231,12 +229,12 @@
     "    if response.status_code == 200:\n",
     "        page_data_soup = BeautifulSoup(response.content,'lxml')  \n",
     "        author_name = page_data_soup.find('a', rel='author').text\n",
-    "        num_links = len(page_data_soup.find_all('a', href=True))\n",
+    "        links = [link.get('href') for link in page_data_soup.find_all('a', href=True)]\n",
     "        headline = page_data_soup.find('h1', class_=\"entry-title\").text\n",
     "        body = ''\n",
     "        for tag in page_data_soup.find_all('p'):\n",
     "            body += tag.text\n",
-    "        dict_solution = {'author_name':author_name, \"num_links\":num_links, \"headline\":headline,\"body\":body}\n",
+    "        dict_solution = {'author_name':author_name, \"links\":links, \"headline\":headline,\"body\":body}\n",
     "        return dict_solution"
    ]
   },
