added EventRegistry notebook and updated AI and NYT notebook

--- a/NYTArchive.ipynb
+++ b/NYTArchive.ipynb
@@ -701,6 +701,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('nyt-1-2017.pkl', 'rb') as handle:\n",
+    "    t = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'author_name': 'JULIE WEED',\n",
+       " 'body': 'A few days before his flight home to Seattle from Tokyo in October, Bruce Ryan learned that a windstorm might disrupt air travel in the Pacific Northwest. Mr. Ryan and his wife, Karen, didn’t want to risk getting stuck, “all jet-lagged and waiting to see if the flight to Seattle was going to happen,” from Los Angeles, their connecting city. So he went with some trepidation to the Alaska Airlines website to find the cost of changing his tickets. “I expected the fare and change fees to end up around the cost of a whole new booking,” Mr. Ryan said. So he was pleasantly surprised to find that Alaska Airlines had issued a “weather waiver” in advance of the possible storm. It allowed passengers flying in or out of the affected area to make no-cost changes to their itineraries on their own, without speaking to a representative. Many other airlines are now doing likewise, recognizing that they can make life easier for themselves and their passengers by anticipating weather delays and putting travel changes in the hands of their customers (and their smartphones) before the situation escalates into an act-of-God crisis. Airline passengers used to go to airports as storms brewed, hoping that their flights would be able to depart, then enduring long rebooking lines if they were canceled. Now, airlines are notifying customers, sometimes days in advance, of a potential disruption and giving them online ways to change their own flights. Weather waivers generally give several options to ticketholders planning to use affected airports. Passengers can cancel their trips and obtain refunds. Or they can move their travel up or back a few days, or reroute via a different connecting city. Nearby arrival and departure cities can be selected as alternatives, too, with no difference in airfare. So, for example, Delta Air Lines passengers in upstate New York who are snowed in at the Ithaca airport might depart from Syracuse or Elmira in the following days instead. Or they could even pay their own way on a five-hour bus ride to New York City and depart from one of the airports there. It’s up to the passenger to do the research on the company’s website or phone app to determine the most convenient, time, routing or departure/arrival city. Otherwise, the airline systems will automatically book the passenger on the next available flight on the original route. Airlines are not obliged to compensate travelers with lodging or meals for delays because of extreme weather. So in the case of the Ryans, traveling back from Tokyo, Mr. Ryan used the hotel and car rental apps on his phone to estimate the cost of spending an extra day and night in Los Angeles. That made it possible for them to carefully consider their choices. “On the phone with an agent, we’d have to decide right when they give us our options,” Mr. Ryan said. “Now we can research everything on our time frame — not the airline’s.” The pair decided to stay in Los Angeles for the day and try a new restaurant they had read about. That is pretty much how the airlines say they want passengers to respond to weather waivers: by deciding themselves what works best. “We are trying to put as much control as possible in the hands of customers,” Ross Feinstein, a spokesman for American Airlines, said. The company wants customers to look at alternatives “while they’re still at home, before they come to the airport,” he said. About a year ago, American updated its phone app with the ability to change itineraries when weather waivers were issued. Mr. Feinstein said that calls to the reservation center during storms had decreased significantly as a result of the new self-serve option. Delta Air Lines last year added the same capability to its phone app. “We used to just rebook passengers on the next available flight,” said Michael Thomas, a Delta spokesman. “Now we let them choose.” Some passengers want to use Twitter to send their requests, so the company’s social media team has added staff members to handle rebookings through that channel. The industry’s apps and the waivers are still being refined. American Airlines plans to offer customers the ability to change departure or arrival cities themselves, something that currently has to be done by talking to an agent on the phone. The company is also expanding the weather waivers to cover summer thunderstorms, because of the “bigger weather events we are experiencing now,” Mr. Feinstein said. While the new approaches to weather disruptions can make travel easier for passengers, the airlines are not doing it just to keep customers happy. They have a financial incentive. It pays for the airlines to let passengers change flights online or even rebook themselves on another carrier, said Brian Kelly, a travel expert who runs The Points Guy blog. “If customers make the changes,” he said, “the airline doesn’t have to pay its employees to spend time finding them alternative routes.” What’s more, economy fliers — like retirees who change their weather-affected tickets to shift their trip to the following week — open up valuable inventory that can be sold at premium prices to those who must fly no matter what. “Last-minute seats for business travelers bring in critical revenue,” Mr. Kelly said, and can help make up for weather-related losses. International airlines also offer weather waivers, which is particularly crucial for carriers that have partnerships with domestic airlines. For example, a passenger flying on United Airlines to Chicago and from there on Lufthansa Airlines to Germany, will encounter consistent policies in cases of inclement weather. What only the travelers can decide, of course, is whether to heed a weather warning and change itineraries — or take a chance that the trip can proceed as planned. Sometimes there is only so much an airline can do. Passengers booked on a delayed Delta Air Lines flight from Ithaca to Detroit in December received a series of email messages, pushing back their 5:30 p.m. departure bit by bit because of a snowstorm. The emails offered the option of a free ticket change. But, seats out of the small airport were booked solid for the next few days. With few alternatives, the passengers sat hoping their flight would eventually depart. At midnight, it was canceled.',\n",
+       " 'headline': 'Airlines, Now More Proactive on Weather, Allow Fliers to Shift Own Travel Plans',\n",
+       " 'links': ['http://www.nytimes.com/content/help/site/ie9-support.html',\n",
+       "  '#story-header',\n",
+       "  '#site-index-navigation',\n",
+       "  'http://mobile.nytimes.com/2017/01/02/business/flight-weather-delay-change-itinerary.html',\n",
+       "  'http://www.nytimes.com/',\n",
+       "  'https://www.nytimes.com/pages/business/index.html',\n",
+       "  'https://nyti.ms/2hKQYag',\n",
+       "  'https://www.nytimes.com/pages/business/index.html',\n",
+       "  '#story-continues-1',\n",
+       "  '#story-continues-1',\n",
+       "  '#story-continues-1',\n",
+       "  '#story-continues-2',\n",
+       "  '#story-continues-3',\n",
+       "  'http://www.nytimes.com/topic/company/delta-air-lines-inc?inline=nyt-org',\n",
+       "  '#story-continues-4',\n",
+       "  '/newsletters',\n",
+       "  '',\n",
+       "  '/mem/email.html',\n",
+       "  '/logout',\n",
+       "  '/privacy',\n",
+       "  'http://thepointsguy.com/',\n",
+       "  '#story-continues-5',\n",
+       "  'http://topics.nytimes.com/top/news/business/companies/united_airlines/index.html?inline=nyt-org',\n",
+       "  'http://www.nytreprints.com/',\n",
+       "  'http://www.nytimes.com/pages/todayspaper/index.html',\n",
+       "  'http://www.nytimes.com/subscriptions/Multiproduct/lp839RF.html?campaignId=48JQY',\n",
+       "  '#whats-next',\n",
+       "  'https://docs.google.com/forms/d/e/1FAIpQLSfLW30xgZodF1qRAg80oWEGuDpW-1HHaL0g42G3SmvB2f4lCw/viewform?entry.8537735=https://www.nytimes.com/2017/01/02/business/flight-weather-delay-change-itinerary.html',\n",
+       "  'https://www.nytimes.com/2016/10/23/travel/europe-and-the-caribbean-in-reach-at-last.html',\n",
+       "  'https://www.nytimes.com/2016/07/12/business/six-tips-for-getting-cheap-or-free-upgrades.html',\n",
+       "  'https://www.nytimes.com/2016/10/25/business/brace-yourself-for-a-busy-holiday-season-at-airports.html',\n",
+       "  'https://www.nytimes.com/2016/01/10/travel/airport-delays-severe-weather.html',\n",
+       "  'https://www.nytimes.com/2016/10/23/travel/europe-and-the-caribbean-in-reach-at-last.html',\n",
+       "  'https://www.nytimes.com/2016/07/12/business/six-tips-for-getting-cheap-or-free-upgrades.html',\n",
+       "  'https://www.nytimes.com/2016/10/25/business/brace-yourself-for-a-busy-holiday-season-at-airports.html',\n",
+       "  'https://www.nytimes.com/2016/01/10/travel/airport-delays-severe-weather.html',\n",
+       "  'https://myaccount.nytimes.com/get-started/auth?OC=20000050400&campaignId=6KJKF',\n",
+       "  'https://myaccount.nytimes.com/get-started/auth?OC=20000050400&campaignId=6KJKF',\n",
+       "  'https://www.nytimes.com/subscriptions/Multiproduct/lp8K6QF.html?campaignId=6KJKJ',\n",
+       "  'https://myaccount.nytimes.com/get-started/auth?OC=20000056980&campaignId=6KJKF',\n",
+       "  'https://myaccount.nytimes.com/get-started/auth?OC=20000056980&campaignId=6KJKF',\n",
+       "  'https://www.nytimes.com/subscriptions/Multiproduct/lp8K6QF.html?campaignId=6KJKJ',\n",
+       "  'https://www.nytimes.com/subscriptions/hd/365.html?MediaCode=WB7AA&CMP=6KJKF',\n",
+       "  'https://www.nytimes.com/subscriptions/hd/365.html?MediaCode=WB7AA&CMP=6KJKF',\n",
+       "  'https://www.nytimes.com/subscriptions/Multiproduct/lp8K6QF.html?campaignId=6KJKJ',\n",
+       "  'http://www.nytimes.com/',\n",
+       "  'http://www.nytimes.com/',\n",
+       "  'https://www.nytimes.com/pages/world/index.html',\n",
+       "  'https://www.nytimes.com/pages/national/index.html',\n",
+       "  'https://www.nytimes.com/pages/politics/index.html',\n",
+       "  'https://www.nytimes.com/pages/nyregion/index.html',\n",
+       "  'https://www.nytimes.com/pages/business/index.html',\n",
+       "  'https://www.nytimes.com/pages/technology/index.html',\n",
+       "  'https://www.nytimes.com/section/science',\n",
+       "  'https://www.nytimes.com/pages/health/index.html',\n",
+       "  'https://www.nytimes.com/pages/sports/index.html',\n",
+       "  'https://www.nytimes.com/pages/education/index.html',\n",
+       "  'https://www.nytimes.com/pages/obituaries/index.html',\n",
+       "  'https://www.nytimes.com/pages/todayspaper/index.html',\n",
+       "  'https://www.nytimes.com/pages/corrections/index.html',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#columnists',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#editorials',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#contributing',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#op-ed',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#opinionator',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#letters',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#sundayreview',\n",
+       "  'https://www.nytimes.com/pages/opinion/index.html#takingNote',\n",
+       "  'https://www.nytimes.com/roomfordebate',\n",
+       "  'http://topics.nytimes.com/top/opinion/thepubliceditor/index.html',\n",
+       "  'https://www.nytimes.com/video/opinion',\n",
+       "  'https://www.nytimes.com/pages/arts/index.html',\n",
+       "  'https://www.nytimes.com/pages/arts/design/index.html',\n",
+       "  'https://www.nytimes.com/pages/books/index.html',\n",
+       "  'https://www.nytimes.com/pages/arts/dance/index.html',\n",
+       "  'https://www.nytimes.com/pages/movies/index.html',\n",
+       "  'https://www.nytimes.com/pages/arts/music/index.html',\n",
+       "  'https://www.nytimes.com/events/',\n",
+       "  'https://www.nytimes.com/pages/arts/television/index.html',\n",
+       "  'https://www.nytimes.com/pages/theater/index.html',\n",
+       "  'https://www.nytimes.com/video/arts',\n",
+       "  'https://www.nytimes.com/pages/automobiles/index.html',\n",
+       "  'https://www.nytimes.com/crosswords/',\n",
+       "  'https://www.nytimes.com/pages/dining/index.html',\n",
+       "  'https://www.nytimes.com/pages/education/index.html',\n",
+       "  'https://www.nytimes.com/pages/fashion/index.html',\n",
+       "  'https://www.nytimes.com/pages/health/index.html',\n",
+       "  'https://www.nytimes.com/section/jobs',\n",
+       "  'https://www.nytimes.com/pages/magazine/index.html',\n",
+       "  'https://www.nytimes.com/events/',\n",
+       "  'https://www.nytimes.com/section/realestate',\n",
+       "  'https://www.nytimes.com/section/t-magazine',\n",
+       "  'https://www.nytimes.com/section/travel',\n",
+       "  'https://www.nytimes.com/pages/fashion/weddings/index.html',\n",
+       "  'https://www.nytimes.com/ref/classifieds/',\n",
+       "  'https://www.nytimes.com/marketing/tools-and-services/',\n",
+       "  'https://www.nytimes.com/pages/topics/',\n",
+       "  'http://topics.nytimes.com/top/opinion/thepubliceditor/index.html',\n",
+       "  'https://www.nytimes.com/events/',\n",
+       "  'https://www.nytimes.com/interactive/blogs/directory.html',\n",
+       "  'https://www.nytimes.com/pages/multimedia/index.html',\n",
+       "  'https://lens.blogs.nytimes.com/',\n",
+       "  'https://www.nytimes.com/video',\n",
+       "  'https://www.nytimes.com/store/?&t=qry542&utm_source=nytimes&utm_medium=HPB&utm_content=hp_browsetree&utm_campaign=NYT-HP&module=SectionsNav&action=click&region=TopBar&version=BrowseTree&contentCollection=NYT%20Store&contentPlacement=2&pgtype=Homepage',\n",
+       "  'https://www.nytimes.com/times-journeys/?utm_source=nytimes&utm_medium=HPLink&utm_content=hp_browsetree&utm_campaign=NYT-HP',\n",
+       "  'https://www.nytimes.com/seeallnav',\n",
+       "  'https://www.nytimes.com/membercenter',\n",
+       "  'http://www.nytimes.com/hdleftnav',\n",
+       "  'http://www.nytimes.com/digitalleftnav',\n",
+       "  'http://www.nytimes.com/tpnav',\n",
+       "  'http://www.nytimes.com/crosswords/index.html',\n",
+       "  'http://www.nytimes.com/marketing/newsletters',\n",
+       "  'https://myaccount.nytimes.com/mem/tnt.html',\n",
+       "  'http://www.nytimes.com/giftleftnav',\n",
+       "  'http://www.nytimes.com/corporateleftnav',\n",
+       "  'http://www.nytimes.com/educationleftnav',\n",
+       "  'http://www.nytimes.com/services/mobile/index.html',\n",
+       "  'http://eedition.nytimes.com/cgi-bin/signup.cgi?cc=37FYY',\n",
+       "  'http://www.nytimes.com/content/help/rights/copyright/copyright-notice.html',\n",
+       "  'http://www.nytimes.com',\n",
+       "  'http://query.nytimes.com/search/sitesearch/#/',\n",
+       "  'mailto:accessibility@nytimes.com',\n",
+       "  'http://www.nytimes.com/ref/membercenter/help/infoservdirectory.html',\n",
+       "  'http://www.nytco.com/careers',\n",
+       "  'http://nytmediakit.com/',\n",
+       "  'http://www.nytimes.com/content/help/rights/privacy/policy/privacy-policy.html#pp',\n",
+       "  'http://www.nytimes.com/privacy',\n",
+       "  'http://www.nytimes.com/ref/membercenter/help/agree.html',\n",
+       "  'http://www.nytimes.com/content/help/rights/sale/terms-of-sale.html',\n",
+       "  'http://spiderbites.nytimes.com',\n",
+       "  'http://www.nytimes.com/membercenter/sitehelp.html',\n",
+       "  'https://myaccount.nytimes.com/membercenter/feedback.html',\n",
+       "  'http://www.nytimes.com/subscriptions/Multiproduct/lp5558.html?campaignId=37WXW'],\n",
+       " 'url': 'http://www.nytimes.com/2017/01/02/business/flight-weather-delay-change-itinerary.html'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[9]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
